# twin-keys

./: README.md  flows.md  motivation.md
api/: .env.example  .gitignore  env.example  package.json
api/prisma/: schema.prisma
api/prisma/migrations/20251011191828_initial/: migration.sql
api/prisma/migrations/20251011195803_add_twin_wallet_private_key/: migration.sql
api/prisma/migrations/20251011200923_edit_user_active/: migration.sql
api/prisma/migrations/20251011233527_add_mining_target_table/: migration.sql
api/prisma/migrations/20251019144538_remove_twin_wallet_from_user/: migration.sql
api/prisma/migrations/20251024005436_add_token_holdings/: migration.sql
api/src/: db.ts  index.ts
api/src/services/: helius-websocket.ts  solana.ts  task-handlers.ts  task-queue.ts
api/src/types/: helius.ts  tasks.ts
api/src/utils/: logger.ts
api/tests/: README.md  deploy-token.test.ts  deployment-status.test.ts  metadata.test.ts  solana.test.ts  test.config.ts
api/tests/sandboxes/: README.md
api/tests/scripts/: reclaim-sol.ts  retry-deployments.ts  update-metadata-uris.ts
ui/: .cursorrules  .prettierrc  README.md  package.json
ui/src/: APITester.tsx  App.tsx  frontend.tsx  index.css  index.html  index.tsx  router.tsx
ui/src/constants/: theme.ts
ui/src/hooks/: useScrollPosition.ts
ui/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx
ui/src/utils/: api.ts
worker/: .env.example  .rustfmt.toml  Cargo.toml  README.md
worker/src/: api_client.rs  db.rs  main.rs  miner.rs  worker.rs
worker/src/entity/: mining_target.rs  mod.rs
(+14 files in other folders)
