[package]
name = "twin-keys-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "2.1"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
bs58 = "0.5"
num_cpus = "1.16"
base64ct = "=1.6.0"
chrono = "0.4"
sha2 = "0.10"
once_cell = "1.19"

